--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,5 @@
+name: "Build & Release"
+
 on:
   pull_request:
     branches:
@@ -6,8 +8,6 @@ on:
   push:
     branches:
       - main
-
-name: "Build & Release"
 
 jobs:
   android-build:
@@ -18,11 +18,17 @@ jobs:
       - uses: actions/setup-java@v3
         with:
           distribution: 'zulu'
-          java-version: '17'  # Use Java 17 for compatibility
+          java-version: '17'
       - uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          architecture: x64
+
+      - name: Set up Android SDK
+        env:
+          ANDROID_HOME: ${{ runner.tool_cache }}/android-sdk
+          PATH: ${{ runner.tool_cache }}/android-sdk/platform-tools:$PATH
+        run: |
+          sdkmanager "build-tools;33.0.0" "platforms;android-33" "platform-tools"
 
       - name: Build APK
         run: flutter build apk --release --split-per-abi
@@ -36,7 +42,7 @@ jobs:
 
   ios-build:
     name: iOS Build & Release
-    runs-on: macos-latest  # Required for iOS builds
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
@@ -46,20 +52,17 @@ jobs:
       - uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          architecture: x64
 
       - name: Build IPA
         run: |
           flutter build ios --no-codesign
-          cd build/ios/iphoneos
-          mkdir Payload
-          mv Runner.app Payload/
-          cd ..
-          zip -r app.ipa Payload
+          xcrun -sdk iphoneos PackageApplication \
+            -v build/ios/iphoneos/Runner.app \
+            -o $PWD/build/ios/iphoneos/Runner.ipa
 
       - name: Push IPA to Releases
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "build/ios/iphoneos/app.ipa"
+          artifacts: "build/ios/iphoneos/Runner.ipa"
           tag: v1.0.${{ github.run_number }}
           token: ${{ secrets.TOKEN }}
